Update deskipsi hero

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
       <h2 class="text-xl font-bold text-gray-900 sm:text-3xl">Collection Collection</h2>
 
       <p class="mt-4 max-w-md text-gray-500">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque praesentium cumque iure
-        dicta incidunt est ipsam, officia dolor fugit natus?
+        Selamat datang di Zahra's store 
       </p>
     </header>
 
