Update name hero

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
  <section>
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8">
     <header>
-      <h2 class="text-xl font-bold text-gray-900 sm:text-3xl">Collection Collection</h2>
+      <h2 class="text-xl font-bold text-gray-900 sm:text-3xl">Zahra Collection</h2>
 
       <p class="mt-4 max-w-md text-gray-500">
         Selamat datang di Zahra's store 
