Update list item

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <nav aria-label="Global" class="hidden md:block">
         <ul class="flex items-center gap-6 text-sm">
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> About </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Zahra </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Careers </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Cantik </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> History </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Sekali </a>
           </li>
 
           <li>
