Update list item

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
       <nav aria-label="Global" class="hidden md:block">
         <ul class="flex items-center gap-6 text-sm">
           <li>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Bismillahirrahmanirrahim </a>
+          </li>
+
+          <li>
             <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Zahra </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Cantik </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Pintar </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Sekali </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Ngoding </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Services </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Di semua </a>
           </li>
 
           <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Projects </a>
-          </li>
-
-          <li>
-            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Blog </a>
+            <a class="text-gray-500 transition hover:text-gray-500/75" href="#"> Mapel </a>
           </li>
         </ul>
       </nav>
